better error handling in psoTransform, now must specify file: url for stylesheet.